--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 </head>
 <body>
     <h1>JavaScript EventListener</h1>
+    <button id="greenButton" onclick="document.body.style.backgroundColor='green'">Click me for green!</button>
+    <button id="redButton" onclick="redButton()">Click me for red!</button>
+    <button id="yellowButton" onclick="yellowBtn()">Click me for yellow!</button>
+    <button id="blueButton" onclick="blueButton()">Click me for blue!</button>
+    <button id="purpleButton" onclick="purpleButton()">Click me for purple!</button>
+    <button id="pinkButton" onclick="pinkButton()">Click me for pink!</button>
+    <button id="tomatoButton" onclick="tomatoButton()">Click me for pink!</button>
 
     <script src="script.js"></script>
 </body>
